[gd_scene load_steps=9 format=3 uid="uid://bjfaxp0mogr"]

[ext_resource type="Script" path="res://scripts/ui.gd" id="1_e3esq"]
[ext_resource type="Texture2D" uid="uid://bff5c2qf0kfae" path="res://assets/spritesheet.png" id="2_6rcs7"]
[ext_resource type="Texture2D" uid="uid://bxcm350catuvc" path="res://assets/background.png" id="2_n3uxb"]

[sub_resource type="Theme" id="Theme_uumue"]

[sub_resource type="LabelSettings" id="LabelSettings_uf7a2"]
font_size = 48
outline_size = 33
outline_color = Color(0, 0, 0, 1)
shadow_size = 22
shadow_color = Color(0.12549, 0.12549, 0.12549, 0.878431)
shadow_offset = Vector2(2, 2)

[sub_resource type="Animation" id="Animation_63mtk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteContainer:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2.72, 2.72)]
}

[sub_resource type="Animation" id="Animation_db66q"]
resource_name = "show_result"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteContainer:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1.93187),
"update": 0,
"values": [Vector2(2.72, 2.72), Vector2(0.99, 0.99)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ofdhh"]
_data = {
"RESET": SubResource("Animation_63mtk"),
"show_result": SubResource("Animation_db66q")
}

[node name="UI" type="Control" node_paths=PackedStringArray("player_points_label", "opponent_points_label", "result", "opponent_result")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_e3esq")
player_points_label = NodePath("PlayerContainer/PlayerPointsLabel")
opponent_points_label = NodePath("OpponentLabel/OpponentPointsLabel")
result = NodePath("ResultLabel/OpponentPointsLabel")
opponent_result = NodePath("ResultLabel/ResultLabel")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = -324.0
offset_right = 576.0
offset_bottom = 324.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_n3uxb")
expand_mode = 1
stretch_mode = 1

[node name="OptionsContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -450.0
offset_top = -155.0
offset_right = 451.0
offset_bottom = -23.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/h_separation = 50
theme_override_constants/v_separation = 50
columns = 3

[node name="Rock" type="Button" parent="OptionsContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 22
theme_override_font_sizes/font_size = 42
text = "ROCK"

[node name="Paper" type="Button" parent="OptionsContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("Theme_uumue")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 22
theme_override_font_sizes/font_size = 42
text = "PAPER"

[node name="Scissors" type="Button" parent="OptionsContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("Theme_uumue")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 22
theme_override_font_sizes/font_size = 42
text = "SCISSORS"

[node name="SpriteContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.72, 2.72)

[node name="PlayerSprite" type="Sprite2D" parent="SpriteContainer"]
position = Vector2(-356, 0)
rotation = 1.5708
texture = ExtResource("2_6rcs7")
flip_h = true
hframes = 3

[node name="EnemySprite" type="Sprite2D" parent="SpriteContainer"]
position = Vector2(356, 0)
rotation = 1.5708
texture = ExtResource("2_6rcs7")
flip_h = true
flip_v = true
hframes = 3

[node name="PlayerContainer" type="GridContainer" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 50.0
offset_right = 196.0
offset_bottom = 188.0

[node name="PlayerLabel" type="Label" parent="PlayerContainer"]
layout_mode = 2
text = "Player"
label_settings = SubResource("LabelSettings_uf7a2")
horizontal_alignment = 1

[node name="PlayerPointsLabel" type="Label" parent="PlayerContainer"]
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_uf7a2")
horizontal_alignment = 1

[node name="OpponentLabel" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -196.0
offset_top = 50.0
offset_right = -50.0
offset_bottom = 188.0
grow_horizontal = 0

[node name="OpponentLabel" type="Label" parent="OpponentLabel"]
layout_mode = 2
text = "Opponent"
label_settings = SubResource("LabelSettings_uf7a2")
horizontal_alignment = 1

[node name="OpponentPointsLabel" type="Label" parent="OpponentLabel"]
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_uf7a2")
horizontal_alignment = 1

[node name="ResultLabel" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -117.0
offset_top = 100.0
offset_right = 117.0
offset_bottom = 284.0
grow_horizontal = 2
theme_override_constants/v_separation = 50

[node name="ResultLabel" type="Label" parent="ResultLabel"]
layout_mode = 2
size_flags_horizontal = 3
text = "ROCK"
label_settings = SubResource("LabelSettings_uf7a2")
horizontal_alignment = 1

[node name="OpponentPointsLabel" type="Label" parent="ResultLabel"]
layout_mode = 2
text = "YOU WIN"
label_settings = SubResource("LabelSettings_uf7a2")
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ofdhh")
}

[connection signal="pressed" from="OptionsContainer/Rock" to="." method="_on_button_pressed" binds= ["Rock"]]
[connection signal="pressed" from="OptionsContainer/Paper" to="." method="_on_button_pressed" binds= ["Paper"]]
[connection signal="pressed" from="OptionsContainer/Scissors" to="." method="_on_button_pressed" binds= ["Scissors"]]
